--- a/src/index.css
+++ b/src/index.css
@@ -41,11 +41,11 @@
 
 .profile{
   width: 400px;
-  height: 400px;
-  border-radius: 50%;
+  height: 480px;
   padding: 20px;
+  border-radius:20%;
   margin:20px;
-  border: 2px solid rgb(173, 18, 204);
+  border: 4px solid rgb(173, 18, 204);
   text-align: center;
 } 
 
@@ -53,8 +53,7 @@
 .intro{
   width: 300px;
   height: auto;
-  
-}
+padding-left: 30px;}
 .intro i{
   font-size: x-large;
 }
